# django-cms-builder

./: .gitignore  Django CMS Builder - Architecture.drawio  README.md  pyproject.toml
config/: settings.py  urls.py
main/: urls.py  views.py
